# RECITE

./: .env.example  .gitignore  CLAUDE.md  LICENSE  MODULE_INDEX.md  PHASE_ROADMAP.md  README.md  RESULTS_INDEX.md  SCRIPT_CATALOG.md  accrual.py  init_recite_benchmark.py  main.py  pyproject.toml  recite.py
changelogs/: 2026-04-06_judge-scorer_session.md  2026-04-06_judge-watcher_session.md  2026-04-06_vllm-merge_session.md
config/: accrual.yaml  accrual_prompts.json  benchmark_prompts.json  benchmarks.yaml  crawler_prompts.json  judge_variants  model_presets.yaml  paths.yaml  rebuttal_large_models.yaml  rebuttal_qwen72b.yaml  rebuttal_scaling_models.yaml  recite_quick.yaml  reproduce_500.yaml  reproduce_originals.yaml
config/rebuttal/: equiv_test_endpoint.yaml  equiv_test_python.yaml  rebuttal_gemma27b.yaml  rebuttal_large_models.yaml  rebuttal_llama70b.yaml  rebuttal_qwen32b.yaml  rebuttal_qwen72b.yaml
config/smoke/: e2e.yaml
data/: truncation_analysis.json
data/benchmark_splits/: benchmark.parquet  benchmark_instance_ids.tsv
rebuttal/: DAG_PLAN.md  README.md  REBUTTAL_PLAN.md  general_gap_analysis.md  response_drafts_ECp3_Yns9_aiEs.md
rebuttal/DVUB/: W3_c2c6_analysis.md  (+4 more)
recite/: llmapis.py
reproduce/: compare_predictions.py  reproduce_originals.yaml  reproduce_small_all_models.yaml  reproduce_smoke.yaml  validate_1to1.py
scripts/: equiv_test_hf.py  rebuttal_eval_endpoint.py  truncation_analysis.py
tests/: conftest.py  test_accrual_tiny.py  test_benchmark_tiny.py  test_e2e_pipeline.py  test_ec_impact_tiny.py  test_integration.py  test_rag_extract.py
(+63 files in other folders)
